# that_bass

./: .gitmodules  AGENTS.md  Cargo.toml  README.md  patch_command_gen.rs  patch_paths_conflict.rs  patch_schedule_jobplan.rs  patch_schedule_refactor.rs  patch_tests_schedule.rs
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: rust.yml  test.yml
benches/: boba.rs  create.rs  fett.rs  v1.rs  v2.rs
benches/v1/: create.rs
benches/v2/: foundation.rs  mod.rs  runtime.rs  workloads.rs
examples/v2/: README.md  chunk_layout.rs  command_resolution.rs  executor_runtime.rs  global_tables.rs  instrumentation.rs  keyless_rows.rs  main.rs  managed_keys.rs  metadata.rs  query_surface.rs  schedule_builder.rs  store_planning.rs  vocabulary.rs
future/: 01-competitive-landscape.md  02-field-granularity-and-layout.md  03-chunking-locks-and-query-plans.md  04-scheduler-first-lockless-mode.md  05-radical-ideas.md  06-recommended-roadmap.md  07-keyless-and-user-keyed-tables.md  08-nested-query-soundness.md  README.md
future/plan/: 00-foundation.md  01-identity-and-metadata.md  02-chunk-layout.md  03-keyless-rows.md  04-query-surface.md  05-schedule-builder.md  06-executor-runtime.md  07-command-resolution.md  08-managed-keys.md  09-global-tables.md  10-validation-and-migration.md  11-direct-exclusive-api.md  12-user-keys-and-families.md  13-advanced-queries.md  14-events.md  15-layout-specialization.md  README.md  specification.md  standards.md  validation-matrix.md
src/: add.rs  bits.rs  broadcast.rs  create.rs  database.rs  defer.rs  destroy.rs  event.rs  filter.rs  key.rs  lib.rs  listen.rs  modify.rs  or.rs  query.rs  remove.rs  resources.rs  row.rs  slot.rs  table.rs  template.rs  trace.rs  utility.rs
src/core/: bits.rs  borrow.rs  iterate.rs  mod.rs  or.rs  slice.rs  tuple.rs  utility.rs  view_vec.rs
src/query/: filter.rs  join.rs  mod.rs  row.rs
src/query2/: filter.rs  join.rs  mod.rs  row.rs
src/test/: add.rs  event.rs  (+6 more)
tests/: add.rs  check.rs  common.rs  create.rs  derive.rs  destroy.rs  event.rs  query.rs  remove.rs  store.rs  v1.rs  v2.rs  v4.rs
that_base_derive/: Cargo.toml
(+73 files in other folders)
