[package]
name = "that_bass"
version = "0.1.0"
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/that_bass/latest/that_bass/"
license = "MIT"
repository = "https://github.com/Magicolo/that_bass"
build = "build.rs"

[dependencies]
that_base_derive = { path = "./that_base_derive" }
parking_lot = "0.12.5"
slice-dst = "1.6.0"

[dev-dependencies]
intx = "0.1.0"
checkito = "5.0.0"
criterion = "0.8.2"
skeptic = "0.13.7"
rayon = "1.11.0"

[build-dependencies]
skeptic = "0.13"

[workspace]
members = ["that_base_derive"]

[[bench]]
name = "create"
harness = false
