[package]
name = "that_bass"
version = "0.1.0"
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2024"
readme = "README.md"
documentation = "https://docs.rs/that_bass/latest/that_bass/"
license = "MIT"
repository = "https://github.com/Magicolo/that_bass"
build = "build.rs"

[dependencies]
that_base_derive = { path = "./that_base_derive" }
parking_lot = "0.12.5"
slice-dst = "1.6.0"
orn = "1.0.0"
atomic-wait = "1.1.0"
hecs = "0.11.0"
itertools = "0.14.0"

[dev-dependencies]
intx = "0.1.0"
checkito = "5.0.0"
criterion = "0.8.2"
skeptic = "0.13.7"
rayon = "1.11.0"

[build-dependencies]
skeptic = "0.13"

[workspace]
members = ["that_base_derive"]

[[bench]]
name = "v1"
harness = false

[[bench]]
name = "v2"
harness = false
